# CVLens

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
Frontend/: streamlit_app.py
Frontend/utils/: backend_integration.py  data_models.py  n8n_webhook_client.py  resume_processor.py  ui_components.py
Resume_Parser/: firebase-service-account.json  firebase_config.py  gdrive_config.py  gdrive_credentials.json  resume_parser.ipynb  resume_parser.py
