[project]
name = "cvlens"
version = "0.1.0"
description = "CVLens - AI-powered resume analysis and job matching platform"
authors = [
    {name = "Sarthak Chandervanshi",email = "54674615+SarthakChandervanshi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pymupdf>=1.26.4,<2.0.0",
    "pdfplumber>=0.11.7,<0.12.0",
    "spacy>=3.8.7,<4.0.0",
    "streamlit>=1.28.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "firebase-admin>=7.1.0,<8.0.0",
    "google-auth>=2.41.1,<3.0.0",
    "google-auth-oauthlib>=1.2.2,<2.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "google-api-python-client>=2.184.0,<3.0.0"
]


[tool.poetry]
name = "cvlens"
version = "0.1.0"
description = "CVLens - AI-powered resume analysis and job matching platform"
authors = ["Sarthak Chandervanshi <54674615+SarthakChandervanshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pymupdf = "^1.26.4"
pdfplumber = "^0.11.7"
spacy = "^3.8.7"
streamlit = "^1.28.0"
pypdf = "^3.0.0"
python-docx = "^0.8.11"
firebase-admin = "^7.1.0"
google-auth = "^2.41.1"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.184.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.9.0"}
nbformat = "^5.10.4"
pytest = "^7.0.0"
flake8 = "^6.0.0"
